fix bug introduced after rebase
